--- a/build.xml
+++ b/build.xml
@@ -3,29 +3,35 @@
   <property name="src" location="src"/>
   <property name="build" location="build"/>
   <property name="dist"  location="dist"/>
+  <property name="test"  location="test"/>
 
-  <target name="init">
-    <!-- Create the time stamp -->
-    <tstamp/>
-    <!-- Create the build directory structure used by compile -->
-    <mkdir dir="${build}"/>
-  </target>
-
-  <target name="compile" depends="init"
-        description="compile the source " >
+  <target name="compile" description="compile the source">
+    <mkdir dir="${build}/classes"/>
     <!-- Compile the java code from ${src} into ${build} -->
-    <javac srcdir="${src}" destdir="${build}" includeantruntime="false" debug="on"/>
+    <javac srcdir="${src}" destdir="${build}/classes" includeantruntime="false" debug="on"/>
   </target>
 
-  <target name="dist" depends="compile"
+  <target name="compile-test" description="compile the tests">
+    <mkdir dir="${build}/test-classes"/>
+    <javac srcdir="${test}" destdir="${build}/test-classes" includeantruntime="false" debug="on">
+      <classpath>
+        <pathelement location="${build}/classes"/>
+      </classpath>
+    </javac>
+  </target>
+
+  <target name="test" depends="compile-test" description="run tests">
+    <java classpath="${build}/classes:${build}/test-classes" classname="Test"/>
+  </target>
+
+  <target name="dist" depends="compile,test"
         description="generate the distribution" >
     <!-- Create the distribution directory -->
     <mkdir dir="${dist}/lib"/>
 
-    <jar jarfile="${dist}/lib/${ant.project.name}-${DSTAMP}.jar" basedir="${build}">
+    <jar jarfile="${dist}/lib/${ant.project.name}.jar" basedir="${build}/classes">
       <manifest>
-        <attribute name="Main-Class"
-              value="Main"/>
+        <attribute name="Main-Class" value="Main"/>
       </manifest>
     </jar>
   </target>
