work towards repl

--- a/build.xml
+++ b/build.xml
@@ -42,4 +42,8 @@
     <delete dir="${build}"/>
     <delete dir="${dist}"/>
   </target>
+
+  <target name="run" depends="compile">
+    <java classpath="${build}/classes" classname="pattern.Main"/>
+  </target>
 </project>
