--- a/build.xml
+++ b/build.xml
@@ -2,13 +2,18 @@
   <!-- set global properties for this build -->
   <property name="src" location="src"/>
   <property name="build" location="build"/>
-  <property name="dist"  location="dist"/>
   <property name="test"  location="test"/>
+
+  <property name="kotlin.home" location="lib/kotlinc"/>
+
+  <taskdef resource="org/jetbrains/jet/buildtools/ant/antlib.xml" classpath="${kotlin.home}/lib/kotlin-ant.jar"/>
 
   <target name="compile" description="compile the source">
     <mkdir dir="${build}/classes"/>
-    <!-- Compile the java code from ${src} into ${build} -->
-    <javac srcdir="${src}" destdir="${build}/classes" includeantruntime="false" debug="on"/>
+    <javac srcdir="${src}/main/java" destdir="${build}/classes" includeantruntime="false" debug="on"/>
+
+    <mkdir dir="${build}/kotlin-classes"/>
+    <kotlinc src="${src}/main/kotlin" output="build/kotlin-classes" classpath="${build}/classes"/> 
   </target>
 
   <target name="compile-test" description="compile the tests">
@@ -27,9 +32,9 @@
   <target name="dist" depends="compile,test"
         description="generate the distribution" >
     <!-- Create the distribution directory -->
-    <mkdir dir="${dist}/lib"/>
+    <mkdir dir="${build}/lib"/>
 
-    <jar jarfile="${dist}/lib/${ant.project.name}.jar" basedir="${build}/classes">
+    <jar jarfile="${build}/lib/${ant.project.name}.jar" basedir="${build}/classes">
       <manifest>
         <attribute name="Main-Class" value="Main"/>
       </manifest>
@@ -38,9 +43,7 @@
 
   <target name="clean"
         description="clean up" >
-    <!-- Delete the ${build} and ${dist} directory trees -->
     <delete dir="${build}"/>
-    <delete dir="${dist}"/>
   </target>
 
   <target name="run" depends="compile">
